# NeMo-XE-Old

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dock_compile
doc/: CMakeLists.txt
docs/: Doxyfile.in  README.md  header.html
docs/html/: _core_output_8cpp.html  _core_output_8cpp_source.html  _core_output_8h.html  _core_output_8h.js  _core_output_8h_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  _true_north_core_logger_8cpp.html  _true_north_core_logger_8cpp.js  _true_north_core_logger_8cpp_source.html  _true_north_core_logger_8h.html  _true_north_core_logger_8h_source.html  annotated.html  annotated_dup.js  atomicops_8h.html  atomicops_8h.js  atomicops_8h_source.html  bug.html  class_callback_p_e-members.html  class_callback_p_e.html  class_callback_p_e.js  class_core_output-members.html  class_core_output.html  class_core_output.js  class_core_output_m_p_i-members.html  class_core_output_m_p_i.html  class_core_output_m_p_i.js  class_core_output_thread-members.html  class_core_output_thread.html  class_core_output_thread.js  class_core_test-members.html  class_core_test.html  class_core_test.js  class_neuron_generic-members.html  class_neuron_generic.html  class_neuron_generic.js  class_neuron_l_i_f-members.html  class_neuron_l_i_f.html  class_neuron_l_i_f.js  class_neuron_test-members.html  (+155 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  (+61 more)
src/: CMakeLists.txt  NeMoConfig.cpp  NeMoConfig.h  gen_build_opts.py  globals.cpp  globals.h  info_display.cpp  info_display.h  main.cpp  mapping.cpp  mapping.h  nemo_build_options.h  nemo_build_options.h.in  nemo_build_options_template.in
src/include/: CoreLP.h  CoreOutput.h  NeMoConfig.h  NeMoXe.h  globals.h  mapping.h  nemo_config.h.in  nemo_input.h  nemo_xe.h  nscs_json_parser.h
src/io/: CoreOutput.cpp  tn_parser_wrapper.cpp
src/neuro/: CoreLP.cpp  INeuroCoreBase.cpp  INeuroCoreBase.h  LIFCore.cpp  LIFCore.h  TrueNorthCore.cpp  TrueNorthCore.h  core.cpp  core.h  neuron_generic.cpp  neuron_generic.h
src/nscs_json/: nscs_json_parser.cpp
templates/: doxygen.conf.in
test/: CMakeLists.txt  INeuroCoreBase_test.cpp  LIFCore_test.cpp  TrueNorthCoreLogger.cpp  TrueNorthCoreLogger.h  core_test.cpp  globals_test.cpp  ross_testing_wrapper.cpp  ross_testing_wrapper.h  tn_parser_wrapper_test.cpp  writer_test.cpp
